--- a/src/App.css
+++ b/src/App.css
@@ -20,18 +20,21 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: rgb(206, 133, 7);
-  width: 40%;
-  height: 30%;
+  background: rgb(243, 240, 236);
+  width: 30%;
+  height: auto;
   padding: 2rem;
   border-radius: 25px;
 }
 
-.heading {
+/* .heading {
   display: flex;
   align-items: center;
   height: 350px;
+} */
 
+.lower {
+  padding-top: 1rem;
 }
   
 .button {
@@ -44,17 +47,17 @@
   align-items: center;
   cursor: pointer;
   text-transform: uppercase;
-  height: 200px;
-  width: 210px;
+  height: 45px;
+  width: 100px;
   opacity: 1;
   background-color: #ffffff;
-  border: 1px solid rgba(22, 76, 167, 0.6);
+  border: 3px solid rgba(22, 76, 167, 0.6)
 }
     
 .button span {
   color: #164ca7;
   font-size: 12px;
-  font-weight: 500;
+  font-weight: bold;
   letter-spacing: 0.7px;
 }
     
